# lcp-rs

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  rust.yml
src/: cli.rs  find_services.rs  main.rs  previous.rs
src/commands/: list.rs  mod.rs
