[package]
name = "alcp"
version = "0.1.0"
edition = "2018"
authors = ["Dávid Balatoni <balcsida@gmail.com>"]
description = "An alternative DXP Cloud CLI written in Rust"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
configparser = "3"
dirs = "4"
clap = { version = "3", features = ["derive"] }